--- a/views/aluminio.html
+++ b/views/aluminio.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <picture class="header__logo">
-       <img class="header__img" src="../img/logo.PNG" alt="logo de herreria antonutti">
+       <img class="header__img" src="../img/logo.png" alt="logo de herreria antonutti">
     </picture>
     <nav class="navbar navbar-expand-md  navbar-dark">
         <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
