--- a/views/aluminio.html
+++ b/views/aluminio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aluminio/herreria antonutti</title>
+    <title>Aluminio/Herreria Antonutti</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -26,13 +26,13 @@
               <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">nosotros</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="aluminio.html">aluminio</a>
+              <a class="nav-link" href="aluminio.html">Aluminio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="herreria.html">herreria</a>
+              <a class="nav-link" href="herreria.html">Herreria</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactos.html">Contactos</a>
@@ -44,12 +44,12 @@
 <main class="container">
   <div class="div__aluminio__herreria">
   <article class="animate__animated animate__fadeInLeft">
-               <h1 class="aluminio__herreria__titulo">aluminio</h1>
+               <h1 class="aluminio__herreria__titulo">Aluminio</h1>
                <p class="herreria__texto">Realizamos trabajos de aluminio a medida, permitiendo combinarlas con vidrios de seguridad transparentes, esmerilados u otros. tambien Contamos con barandas para piletas, balcones, escaleras, entre pisos, terrazas. Mira los distintos modelos de perfiles y trabajos en esta sección.</p>
   </article>
   </div> 
     <article>
-      <h2 class="caja__titulo">perfiles y galeria de trabajos</h2>
+      <h2 class="caja__titulo">Perfiles y galeria de trabajos</h2>
     </article>
   <section class="caja">
        
@@ -136,10 +136,10 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="encabezado">            
-            <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-            <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
+            <h3 class="encabezado__horarios">Horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+            <h3 class="encabezado__direccion">Direcion: gramme 5178</h3>
             <div class="alert alert-danger" role="alert">
-                 <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+                 <p>Esta pagina web es sin fines de lucro . todos los derechos reservados</p>
             </div>                  
    </section>
 </footer> 
