--- a/views/herreria.html
+++ b/views/herreria.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>herreria/herreria antonutti</title>
+     <title>Herreria/Herreria Antonutti</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -27,13 +27,13 @@
               <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">nosotros</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="aluminio.html">aluminio</a>
+              <a class="nav-link" href="aluminio.html">Aluminio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="herreria.html">herreria</a>
+              <a class="nav-link" href="herreria.html">Herreria</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactos.html">Contactos</a>
@@ -45,55 +45,55 @@
        <main class="container">
          <div class="div__aluminio__herreria">
            <article class="animate__animated animate__fadeInLeft">
-                      <h1 class="aluminio__herreria__titulo">herreria</h1>
+                      <h1 class="aluminio__herreria__titulo">Herreria</h1>
                       <p class="herreria__texto"> Brindamos soluciones con todos nuestros productos para la arquitectura de su vivienda, industria o empresa. materiales de alta calidad y un servicio especializado. Integramos en su proyecto todos nuestros productos y trayectoria que ofrecerán las soluciones técnicas y estéticas que su obra necesita.</p>
            </article>
          </div> 
          <article>
-             <h2 class="caja__titulo">materiales de construccion y galeria de trabajos</h2>
+             <h2 class="caja__titulo">Materiales de construccion y galeria de trabajos</h2>
          </article>
          <section class="caja">
               <div class="cuadro">
                     <picture>
                              <img class="cuadro__img" src="../img/perfiles 150px.png" alt="perfil de hierro">
                     </picture>
-                    <h3 class="cuadro__titulo">perfiles</h3>
-                    <p class="cuadro__texto"> perfiles UPN - perfiles IPN</p>
+                    <h3 class="cuadro__titulo">Perfiles</h3>
+                    <p class="cuadro__texto"> Perfiles UPN - perfiles IPN</p>
               </div>
               <div class="cuadro" >            
                     <pircture>
                                <img class="cuadro__img" src="../img/chapas 150px.png" alt="chapas acanaladas">
                     </pircture>
-                    <h3 class="cuadro__titulo">chapas</h3>
-                    <p class="cuadro__texto">cahapas lisas-chaspas acanaladas</p>
+                    <h3 class="cuadro__titulo">Chapas</h3>
+                    <p class="cuadro__texto">Chapas lisas-chaspas acanaladas</p>
               </div>
               <div class="cuadro">        
                    <pircture>
                              <img class="cuadro__img" src="../img/mallas-metalicas 150px.png" alt="rollo de malla metalaca">
                    </pircture>
-                   <h3 class="cuadro__titulo">mallas metalicas</h3>
-                   <p class="cuadro__texto">mallas para la construccion</p>
+                   <h3 class="cuadro__titulo">Mallas metalicas</h3>
+                   <p class="cuadro__texto">Mallas para la construccion</p>
               </div>
               <div class="cuadro">
                   <pircture>
                            <img class="cuadro__img" src="../img/perfiles-c 150px.png" alt="perfil tipo (c) de hierro">
                   </pircture>
-                  <h3 class="cuadro__titulo">perfiles-c</h3>
-                  <p class="cuadro__texto">perfiles C- perfiles</p>
+                  <h3 class="cuadro__titulo">Perfiles-c</h3>
+                  <p class="cuadro__texto">Perfiles C- perfiles</p>
               </div>
               <div class="cuadro">
                    <pircture>
                             <img class="cuadro__img" src="../img/tubos-estructurales 150px.png" alt="tubos cuadrados de distintos diametros">
                   </pircture>
-                  <h3 class="cuadro__titulo">tubos</h3>
-                  <p class="cuadro__texto">redondos-cuadrados-rectangulares</p>
+                  <h3 class="cuadro__titulo">Tubos</h3>
+                  <p class="cuadro__texto">Redondos-cuadrados-rectangulares</p>
               </div>
               <div class="cuadro">
                   <pircture>
                             <img class="cuadro__img" src="../img/construccion-y-herreria 150px.png" alt="hierro de construccion apilados uano arriba del otro">
                   </pircture>
-                  <h3 class="cuadro__titulo">hierros</h3>
-                  <p class="cuadro__texto"> planchuelas-redondos-cuadrados </p>
+                  <h3 class="cuadro__titulo">Hierros</h3>
+                  <p class="cuadro__texto"> Planchuelas-redondos-cuadrados </p>
               </div>            
           </section>
           <section>
@@ -158,11 +158,11 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
               <div class="encabezado">            
-                <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-                <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
+                <h3 class="encabezado__horarios">Horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+                <h3 class="encabezado__direccion">Direcion: gramme 5178</h3>
 
               <div class="alert alert-danger" role="alert">
-                  <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+                  <p>Esta pagina web es sin fines de lucro . todos los derechos reservados</p>
               </div>                  
      </section>
   </footer> 
