--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nosotros/herreria antonutti</title>
+    <title>Nosotros/Herreria Antonutti</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -28,13 +28,13 @@
               <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">nosotros</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="aluminio.html">aluminio</a>
+              <a class="nav-link" href="aluminio.html">Aluminio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="herreria.html">herreria</a>
+              <a class="nav-link" href="herreria.html">Herreria</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactos.html">Contactos</a>
@@ -64,7 +64,7 @@
                                   </picture>
                                   <article> 
                                       <h2 class="contenedor__titulo">INNOVACION</h2>
-                                      <p class="contenedor__parrafo">empezamos a atravesar un proceso de profesionalización que se va acentuando a medida que la empresa crece y con la complejidad de los proyectos que cada vez era más común gracias a la confianza que nos tenían nuestros clientes.</p>
+                                      <p class="contenedor__parrafo">Empezamos a atravesar un proceso de profesionalización que se va acentuando a medida que la empresa crece y con la complejidad de los proyectos que cada vez era más común gracias a la confianza que nos tenían nuestros clientes.</p>
                                   </article>   
                                   </div>                     
                                 
@@ -82,11 +82,11 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
               <div class="encabezado">            
-                <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-                <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
+                <h3 class="encabezado__horarios">Horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+                <h3 class="encabezado__direccion">Direcion: gramme 5178</h3>
 
 <div class="alert alert-danger" role="alert">
-                <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+                <p>Esta pagina web es sin fines de lucro . todos los derechos reservados</p>
 </div>                  
      </section>
   </footer> 
